turtleart.house.House.scala.error
Erreur de compilation :
House:6: error: not found: value vance
  droite(60);vance(100)
             ^